--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -28,3 +28,5 @@
 git_push.sh
 # remove ca_cert_data parameter that is incompatible with urllib3 1.26.x
 trivium_python_sdk/rest.py
+pyproject.toml
+requirements.txt
