--- a/docs.yaml
+++ b/docs.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: trivium-cash
-  version: 0.2.8.dev1
+  version: 0.2.8.dev2
 paths:
   /api/v1/user/{userId}:
     get:
@@ -574,7 +574,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RedemptionInfo'
               example:
-                redemptionDate: '2025-05-10'
+                redemptionDate: '2025-05-12'
         '400':
           description: Invalid value
           content:
@@ -1714,9 +1714,11 @@ paths:
                 $ref: '#/components/schemas/PaymentBalances'
               example:
                 balances:
-                - amount: 88837.43
+                - availableBalance: 88837.43
+                  pendingBalance: 0
                   currencyCode: SGD
-                - amount: 1778.11
+                - availableBalance: 1778.11
+                  pendingBalance: 0
                   currencyCode: USD
         '400':
           description: 'Invalid value, Invalid value for: path parameter userId'
@@ -1778,8 +1780,8 @@ paths:
                 payoutIntentionId: 3c538b72-76af-4aa1-bba3-fe0e12746f3f
                 fromAmount: 553.45
                 fromCurrency: SGD
-                toAmount: 553.45
-                toCurrency: SGD
+                toAmount: 721.8
+                toCurrency: USD
                 expiresAt: '2025-05-07T15:04:42.746287Z'
         '400':
           description: 'Invalid value, Invalid value for: body'
@@ -1895,7 +1897,6 @@ components:
       required:
       - payoutIntentionId
       - purposeOfPayment
-      - uniqueReference
       properties:
         payoutIntentionId:
           type: string
@@ -2777,10 +2778,13 @@ components:
       title: PaymentBalance
       type: object
       required:
-      - amount
+      - availableBalance
+      - pendingBalance
       - currencyCode
       properties:
-        amount:
+        availableBalance:
+          type: number
+        pendingBalance:
           type: number
         currencyCode:
           type: string
