--- a/docs.yaml
+++ b/docs.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: trivium-cash
-  version: 0.2.8.dev6
+  version: 0.2.8
 paths:
   /api/v1/user/{userId}:
     get:
@@ -574,7 +574,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RedemptionInfo'
               example:
-                redemptionDate: '2025-06-04'
+                redemptionDate: '2025-06-10'
         '400':
           description: Invalid value
           content:
@@ -1782,6 +1782,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFound'
+        '502':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadGateway'
       security:
       - apiKeyAuth: []
         httpAuth: []
@@ -1867,34 +1873,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BadGateway'
-      security:
-      - apiKeyAuth: []
-        httpAuth: []
-  /api/v1/payments/payout/approve:
-    post:
-      tags:
-      - payments
-      description: ''
-      operationId: postApiV1PaymentsPayoutApprove
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ApprovePayoutDeprecated'
-            example:
-              payoutIntentionId: 468c5434-5d06-4c14-893f-c7c26a6e27ca
-              purposeOfPayment: GDDS
-              uniqueReference: INV20240319-1192
-        required: true
-      responses:
-        '200':
-          description: ''
-        '400':
-          description: 'Invalid value, Invalid value for: body'
-          content:
-            text/plain:
-              schema:
-                type: string
       security:
       - apiKeyAuth: []
         httpAuth: []
@@ -2034,19 +2012,6 @@ components:
         payoutIntentionId:
           type: string
         recipientRefId:
-          type: string
-        purposeOfPayment:
-          $ref: '#/components/schemas/PaymentPurpose'
-        uniqueReference:
-          type: string
-    ApprovePayoutDeprecated:
-      title: ApprovePayoutDeprecated
-      type: object
-      required:
-      - payoutIntentionId
-      - purposeOfPayment
-      properties:
-        payoutIntentionId:
           type: string
         purposeOfPayment:
           $ref: '#/components/schemas/PaymentPurpose'
