--- a/docs.yaml
+++ b/docs.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: trivium-cash
-  version: 0.2.9
+  version: 0.2.10
 paths:
   /api/v1/user/{userId}:
     get:
@@ -574,7 +574,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RedemptionInfo'
               example:
-                redemptionDate: '2025-09-15'
+                redemptionDate: '2025-10-05'
         '400':
           description: Invalid value
           content:
@@ -2022,6 +2022,8 @@ components:
         purposeOfPayment:
           $ref: '#/components/schemas/PaymentPurpose'
         uniqueReference:
+          type: string
+        paymentReference:
           type: string
     AssetClass:
       title: AssetClass
