--- a/docs.yaml
+++ b/docs.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: trivium-cash
-  version: 0.2.10
+  version: 0.2.11
 paths:
   /api/v1/user/{userId}:
     get:
@@ -574,7 +574,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RedemptionInfo'
               example:
-                redemptionDate: '2025-10-05'
+                redemptionDate: '2025-10-06'
         '400':
           description: Invalid value
           content:
@@ -2917,6 +2917,10 @@ components:
           format: date-time
         status:
           $ref: '#/components/schemas/TransactionStatus'
+        uniqueReference:
+          type: string
+        paymentReference:
+          type: string
         type:
           type: string
           const: PaymentOutgoing
